@@ -11,7 +11,9 @@
       `robot convert --input input/ncbitaxon.owl --output input/ncbitaxon.json -f json`
     - ROBOT may throw errors during conversion which are addressed [here](http://robot.obolibrary.org/errors.html).
     - If JAVA options need to be declared, [here](https://docs.oracle.com/html/E23737_01/configuring_jvm.htm) is a list. </br>
-    `export ROBOT_JAVA_ARGS = <java_options> && robot convert ...`
+    `export ROBOT_JAVA_ARGS = <java_options> && robot convert ...` </br>
+    For e.g. while converting NCBITaxon.owl to a JSON file, there were 'java heap out of space' and 'garbage collection' errors. The following worked: </br>
+    `export ROBOT_JAVA_ARGS="-Xmx8g -XX:+UseConcMarkSweepGC" && robot convert --input input/ncbitaxon.owl --output input/ncbitaxon.json -f json`  
   - [Preparing term-list](https://github.com/deepakunni3/runner#preparing-term-list)
   
 
